--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,12 @@
   "license": "UNLICENSED",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "express-session": "^1.18.0",
+    "mongoose": "^8.1.2",
+    "passport": "^0.7.0",
+    "passport-local-mongoose": "^8.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.4.1",
