--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vis.gl/react-google-maps": "^0.7.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
