--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 SESSION_SECRET=secret
 port=8099
-MONGO_URI=mongodb+srv://admin:test1234@cluster0.bqiaplq.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://admin:test1234@is-it-open-0.zfspppf.mongodb.net/?retryWrites=true&w=majority&appName=is-it-open-0
