--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,4 @@ NODE_ENV=development
 SESSION_SECRET=secret
 port=8099
 MONGO_URI=mongodb+srv://admin:test1234@is-it-open-0.zfspppf.mongodb.net/?retryWrites=true&w=majority&appName=is-it-open-0
+GOOGLE_MAPS_API_KEY=AIzaSyDBsAc39kykWMw9GcY0ReFazPl1DY4XRbg
