--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
+DEBUG_MODE=false
 SESSION_SECRET=secret
 port=8099
 MONGO_URI=mongodb+srv://admin:test1234@is-it-open-0.zfspppf.mongodb.net/?retryWrites=true&w=majority&appName=is-it-open-0
