--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "express-session": "^1.18.0",
     "mongoose": "^8.1.2",
     "passport": "^0.7.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.4.1",
