--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,6 @@ DEBUG_MODE=true
 SESSION_SECRET=secret
 port=8099
 MONGO_URI=mongodb+srv://admin:test1234@is-it-open-0.zfspppf.mongodb.net/?retryWrites=true&w=majority&appName=is-it-open-0
+AGENDA_MONGO_URI=mongodb+srv://admin:test1234@is-it-open-0.zfspppf.mongodb.net/?retryWrites=true&w=majority&appName=is-it-open-0
+AGENDA_COLLECTION_NAME=agendaJobs
 GOOGLE_MAPS_API_KEY=AIzaSyDBsAc39kykWMw9GcY0ReFazPl1DY4XRbg
