--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.42",
+    "agenda": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
