--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@mui/x-data-grid": "^7.1.1",
     "@vis.gl/react-google-maps": "^0.7.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
