--- a/.github/workflows/main_isitopen-new.yml
+++ b/.github/workflows/main_isitopen-new.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build_and_deploy:
     runs-on: windows-latest
 
     steps:
@@ -21,45 +21,32 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: npm install, build, and test
+      - name: npm install and build for client
         run: |
+          cd client
           npm install
           npm run build --if-present
-          npm run test --if-present
-      
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
-        with:
-          name: node-app
-          path: .
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
+      - name: npm install for server
+        run: |
+          cd server
+          npm install
 
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: node-app
-      
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_68CDB01574204FA880AEC6E44DEB58FF }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_41E61157EA3C494C920C41212FA20711 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_597EA779B40447A3A52F7C60A8544887 }}
+      - name: Zip the client build for deployment
+        run: |
+          Compress-Archive -Path client/dist/* -DestinationPath clientbuild.zip -Force
+        shell: pwsh
 
-      - name: 'Deploy to Azure Web App'
+      - name: Zip the server for deployment
+        run: |
+          Compress-Archive -Path server/* -DestinationPath server.zip -Force
+        shell: pwsh
+
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
-        id: deploy-to-webapp
         with:
           app-name: 'IsItOpen-New'
-          slot-name: 'Production'
-          package: .
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: clientbuild.zip server.zip
+
           
