--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@vis.gl/react-google-maps": "^0.7.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
