--- a/server/.env
+++ b/server/.env
@@ -2,6 +2,7 @@ NODE_ENV=development
 DEBUG_MODE=true
 SESSION_SECRET=secret
 port=8099
+ORIGIN=http://localhost:3000
 MONGO_URI=mongodb+srv://admin:test1234@is-it-open-0.zfspppf.mongodb.net/?retryWrites=true&w=majority&appName=is-it-open-0
 AGENDA_MONGO_URI=mongodb+srv://admin:test1234@is-it-open-0.zfspppf.mongodb.net/?retryWrites=true&w=majority&appName=is-it-open-0
 AGENDA_COLLECTION_NAME=agendaJobs
