--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.18.0",
     "mongoose": "^8.1.2",
     "mongoose-to-swagger": "^1.5.1",
+    "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-local-mongoose": "^8.0.0",
     "swagger-jsdoc": "^6.2.8",
