--- a/server/.env
+++ b/server/.env
@@ -10,3 +10,4 @@ AGENDA_COLLECTION_NAME=agendaJobs
 GOOGLE_MAPS_API_KEY=AIzaSyDBsAc39kykWMw9GcY0ReFazPl1DY4XRbg
 EMAIL_ACCOUNT=isitopen.help@gmail.com
 EMAIL_PASSWORD=IIO1234!!
+EMAIL_APP_PASSWORD=zcxluqfozwsigqyt
