--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
+    "@coffeeandfun/google-profanity-words": "^2.1.0",
     "@googlemaps/google-maps-services-js": "^3.3.42",
     "agenda": "^5.0.0",
     "cors": "^2.8.5",
