--- a/server/.env
+++ b/server/.env
@@ -4,7 +4,7 @@ SESSION_SECRET=secret
 port=8099
 ORIGIN=http://localhost:3000
 CLIENT_URL_DEV=http://localhost:3000
-CLIENT_URL_PROD=https://whatstarted.com/
+CLIENT_URL_PROD=https://whatstarted.com
 ADD_COOKIE_SETTINGS=false
 MONGO_URI=mongodb+srv://admin:test1234@is-it-open-0.zfspppf.mongodb.net/?retryWrites=true&w=majority&appName=is-it-open-0
 AGENDA_MONGO_URI=mongodb+srv://admin:test1234@is-it-open-0.zfspppf.mongodb.net/?retryWrites=true&w=majority&appName=is-it-open-0
