--- a/server/.env
+++ b/server/.env
@@ -9,6 +9,7 @@ ADD_COOKIE_SETTINGS=false
 MONGO_URI=mongodb+srv://admin:test1234@is-it-open-0.zfspppf.mongodb.net/?retryWrites=true&w=majority&appName=is-it-open-0
 AGENDA_MONGO_URI=mongodb+srv://admin:test1234@is-it-open-0.zfspppf.mongodb.net/?retryWrites=true&w=majority&appName=is-it-open-0
 AGENDA_COLLECTION_NAME=agendaJobs
+JOB_TYPES=hours,achievements
 GOOGLE_MAPS_API_KEY=AIzaSyDBsAc39kykWMw9GcY0ReFazPl1DY4XRbg
 EMAIL_ACCOUNT=isitopen.help@gmail.com
 EMAIL_PASSWORD=IIO1234!!
